# crud_project_ls18

./: Makefile  README.md  pyproject.toml
crud_project_ls18/: app.py  repository.py  test.py
crud_project_ls18/static/: styles.css
crud_project_ls18/templates/posts/: edit.html  form.html  index.html  new.html
tests/: test_app.py
