[tool.poetry]
name = "crud-project-ls18"
version = "0.1.0"
description = ""
authors = ["Alexander Shangin <alarriva@yandex.ru>"]
readme = "README.md"
packages = [{include = "crud_project_ls18"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flake8 = "^6.1.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
